@@ -1,3 +1,7 @@
+2009-01-06  Petr Machata  <pmachata@redhat.com>
+
+	* dwarflint.c: Checking DW_AT_sibling correctness.
+
 2009-01-06  Ulrich Drepper  <drepper@redhat.com>
 
 	* readelf.c: Implement call frame debug section dumping.
